Compelete Swagger document
