# app/virtual/CustomerStoreRequest.php
@@ -1,0 +1,84 @@
+<?php
+
+/**
+ * @OA\Schema(
+ *     type="object",
+ *     title="Customer storring request",
+ *     description="Some simple request createa as example",
+ * )
+ */
+class CustomerStoreRequest
+{
+
+    /**
+     * @OA\Property(
+     *     title="Firstname",
+     *     description="Name of customer",
+     *     format="string",
+     *     example="masood",
+     * )
+     *
+     * @var string
+     */
+    public $Firstname;
+
+    /**
+     * @OA\Property(
+     *     title="Lastname",
+     *     description="Lastname for customer",
+     *     format="string",
+     *     example="jooibar",
+     * )
+     *
+     * @var string
+     */
+    public $Lastname;
+
+    /**
+     * @OA\Property(
+     *     title="PhoneNumber",
+     *     description="PhoneNumber for customer",
+     *     format="string",
+     *     example="09213679259",
+     * )
+     *
+     * @var string
+     */
+    public $PhoneNumber;
+
+    /**
+     * @OA\Property(
+     *     title="BankAccountNumber",
+     *     description="BankAccountNumber for customer",
+     *     format="string",
+     *     example="1362598811235",
+     * )
+     *
+     * @var string
+     */
+    public $BankAccountNumber;
+
+    /**
+     * @OA\Property(
+     *     title="Email",
+     *     description="Email for customer",
+     *     format="string",
+     *     example="masood.jooibar@gmail.com",
+     * )
+     *
+     * @var string
+     */
+    public $Email;
+
+    /**
+     * @OA\Property(
+     *     title="DateOfBirth",
+     *     description="Date of birth for customer",
+     *     format="string",
+     *     example="2023-04-12 11:02:00",
+     * )
+     *
+     * @var string
+     */
+    public $DateOfBirth;
+}
